--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~12.0.0",
     "firebase": "^8.7.1",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
