--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "build-gh-pages-directives": "ng build --output-path docs/directives --base-href /ng-training/directives/",
     "build-gh-pages-reactive-forms": "ng build --output-path docs/reactive-forms --base-href /ng-training/reactive-forms/",
-    "build-gh-pages-health-app": "ng build --output-path docs/health-app --base-href /ng-training/health-app/",
+    "build-gh-pages-health-app": "ng build --output-path docs/health-app --base-href /ng-training/health-app/ && move docs\\health-app\\index.html docs\\health-app\\404.html",
     "serve-directives": "ng serve --project=directives",
     "serve-reactive-forms": "ng serve --project=reactive-forms",
     "serve-health-app": "ng serve --project=health-app"
