--- a/angular.json
+++ b/angular.json
@@ -272,7 +272,8 @@
             ],
             "assets": [
               "projects/health-app/src/favicon.ico",
-              "projects/health-app/src/assets"
+              "projects/health-app/src/assets",
+              "projects/health-app/src/_redirects"
             ],
             "styles": [
               "projects/health-app/src/styles.scss"
