--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-health-app": "ng build --project=health-app",
     "build-gh-pages-directives": "ng build --output-path docs/directives --base-href /ng-training/directives/",
     "build-gh-pages-reactive-forms": "ng build --output-path docs/reactive-forms --base-href /ng-training/reactive-forms/",
     "build-gh-pages-health-app": "ng build --output-path docs/health-app --base-href /ng-training/health-app/",
