--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-health-app": "npm --prefix projects/health-app build",
-    "build-gh-pages-directives": "ng build --output-path docs/directives --base-href /ng-training/directives/",
-    "build-gh-pages-reactive-forms": "ng build --output-path docs/reactive-forms --base-href /ng-training/reactive-forms/",
-    "build-gh-pages-health-app": "ng build --output-path docs/health-app --base-href /ng-training/health-app/",
-    "serve-directives": "ng serve --project=directives",
+    "build:reactive-forms": "ng build --project=reactive-forms",
+    "build:health-app": "ng build --project=health-app",
     "serve-reactive-forms": "ng serve --project=reactive-forms",
     "serve-health-app": "ng serve --project=health-app"
   },
