testing npx in toml file

--- a/projects/health-app/netlify.toml
+++ b/projects/health-app/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "projects/health-app"
-  command = "ng build --project=health-app"
+  command = "npx run ng build --project=health-app"
   publish = "projects/health-app/dist"
 [[redirects]]
   from = "/*"
