--- a/projects/health-app/netlify.toml
+++ b/projects/health-app/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "projects/health-app"
-  command = "npx run ng build --project=health-app"
-  publish = "projects/health-app/dist"
+  command = "npx ng build --project=health-app"
+  publish = "dist"
 [[redirects]]
   from = "/*"
   to = "/index.html"
