--- a/projects/health-app/netlify.toml
+++ b/projects/health-app/netlify.toml
@@ -1,3 +1,8 @@
+[build]
+  base = ""
+  command = "ng build --project=health-app"
+  publish = "projects/health-app/dist"
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF"
 [[redirects]]
   from = "/*"
   to = "/index.html"
