--- a/projects/health-app/netlify.toml
+++ b/projects/health-app/netlify.toml
@@ -1,8 +1,7 @@
 [build]
-  base = ""
-  command = "ng build --project=health-app"
+  base = "projects/health-app"
+  command = "cd .. && ng build --project=health-app"
   publish = "projects/health-app/dist"
-  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF"
 [[redirects]]
   from = "/*"
   to = "/index.html"
