update readme, add parent gitignore

--- a/projects/reactive-forms/netlify.toml
+++ b/projects/reactive-forms/netlify.toml
@@ -2,3 +2,7 @@
   base = "projects/reactive-forms"
   publish = "dist"
   command = "ng build"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
