--- a/projects/health-app/tsconfig.json
+++ b/projects/health-app/tsconfig.json
@@ -21,6 +21,7 @@
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "compilationMode": "full"
   }
 }
