--- a/projects/health-app/package.json
+++ b/projects/health-app/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^12.2.11",
     "@angular/animations": "~12.2.0",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
