--- a/projects/health-app/package.json
+++ b/projects/health-app/package.json
@@ -8,20 +8,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^12.2.11",
     "@angular/animations": "~12.2.0",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
-    "@angular/fire": "^6.1.5",
+    "@angular/fire": "~6.1.5",
     "@angular/forms": "~12.2.0",
-    "@angular/http": "^7.2.16",
+    "@angular/http": "~7.2.16",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "firebase": "^8.10.0",
-    "rxjs": "~6.6.0",
-    "rxjs-compat": "^6.6.7",
+    "firebase": "~8.10.0",
+    "rxjs": "~7.4.0",
+    "rxjs-compat": "~6.6.7",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
